# Info-2-desafio-1

./: README.md
Desafio1/: CMakeLists.txt  busquedaVerificacion.cpp  desCompresorEncriptador.cpp  main.cpp  manejoArchivos.cpp
